--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "discord.js": "^14.11.0",
     "dotenv": "^16.4.5",
     "langchain": "^0.1.28",
+    "sharp": "^0.33.3",
     "sqlite": "^5.1.1"
   },
   "imports": {
