Changes to support openai completions and bugfixes

--- a/example-config.json
+++ b/example-config.json
@@ -9,5 +9,6 @@
     "repetitionPenalty": 1.2,
     "stop": ["\n"]
   },
-  "ignorePatterns": [".", "!", "/"]
+  "ignorePatterns": [".", "!", "/"],
+  "K": 15
 }
