--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "@langchain/openai": "^0.0.21",
+    "@qdrant/js-client-rest": "^1.9.0",
     "axios": "^1.6.8",
     "better-sqlite3": "^9.4.3",
     "discord.js": "^14.11.0",
