--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@qdrant/js-client-rest": "^1.9.0",
     "axios": "^1.6.8",
     "better-sqlite3": "^9.4.3",
+    "chromadb": "^1.8.1",
     "discord.js": "^14.11.0",
     "dotenv": "^16.4.5",
     "langchain": "^0.1.28",
