--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.8",
     "better-sqlite3": "^9.4.3",
     "chromadb": "^1.8.1",
+    "deno": "^0.1.1",
     "discord.js": "^14.11.0",
     "dotenv": "^16.4.5",
     "langchain": "^0.1.28",
