--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "discord.js": "^14.11.0",
     "dotenv": "^16.4.5",
     "langchain": "^0.1.28",
+    "mongodb": "^6.6.1",
     "sharp": "^0.33.3",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
