--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "author": "Linus Potocnik",
   "license": "MIT",
   "dependencies": {
+    "@langchain/community": "^0.0.57",
+    "@langchain/core": "^0.2.0",
+    "@langchain/langgraph": "^0.0.19",
     "@langchain/openai": "^0.0.21",
     "@qdrant/js-client-rest": "^1.9.0",
     "axios": "^1.6.8",
@@ -20,6 +23,7 @@
     "deno": "^0.1.1",
     "discord.js": "^14.11.0",
     "dotenv": "^16.4.5",
+    "duck-duck-scrape": "^2.2.5",
     "langchain": "^0.1.28",
     "mongodb": "^6.6.1",
     "sharp": "^0.33.3",
