--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@langchain/community": "^0.0.57",
     "@langchain/core": "^0.2.0",
+    "@langchain/groq": "^0.0.12",
     "@langchain/langgraph": "^0.0.19",
     "@langchain/openai": "^0.0.21",
     "@qdrant/js-client-rest": "^1.9.0",
